example-app/hd-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-hello-docker-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: node-hello-docker
