example-app/hd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-hello-docker-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: coucou.local
    http:
      paths:
      - path: /
        backend:
          serviceName: node-hello-docker-service
          servicePort: http
